clusters/home-lab/cdk8s_definitions/dist/prod-media/jellyseerr/jellyseerr.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyseerr-8.1.6
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/version: 1.7.0
    helm-revision: "1"
    helm.sh/chart: jellyseerr-8.1.6
    release: jellyseerr
    service.name: main
  name: jellyseerr
  namespace: prod-media
spec:
  ports:
    - name: main
      port: 10241
      protocol: TCP
      targetPort: 10241
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
    pod.name: main
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyseerr-8.1.6
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/version: 1.7.0
    helm-revision: "1"
    helm.sh/chart: jellyseerr-8.1.6
    release: jellyseerr
  name: jellyseerr
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyseerr
      app.kubernetes.io/name: jellyseerr
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        app: jellyseerr-8.1.6
        app.kubernetes.io/instance: jellyseerr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: jellyseerr
        app.kubernetes.io/version: 1.7.0
        helm-revision: "1"
        helm.sh/chart: jellyseerr-8.1.6
        pod.lifecycle: permanent
        pod.name: main
        release: jellyseerr
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: S6_READ_ONLY_ROOT
              value: "1"
            - name: JELLYFIN_TYPE
              value: ""
            - name: LOG_LEVEL
              value: info
            - name: PORT
              value: "10241"
          image: fallenbagel/jellyseerr:1.9.2@sha256:8f708df0ce3f202056bde5d7bff625eb59efe38f4ee47bdddc7560b6e4a5a214
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 10241
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: jellyseerr
          ports:
            - containerPort: 10241
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 10241
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 100Mi
            requests:
              cpu: 500m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 10241
            timeoutSeconds: 2
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /app/config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: false
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: jellyseerr
              app.kubernetes.io/name: jellyseerr
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: truecharts.org/rack
          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: jellyseerr
              app.kubernetes.io/name: jellyseerr
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
        - emptyDir:
            medium: Memory
            sizeLimit: 100Mi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 100Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 100Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 100Mi
          name: varrun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: prod-infra-basic-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: jellyseerr-8.1.6
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/version: 1.7.0
    helm-revision: "1"
    helm.sh/chart: jellyseerr-8.1.6
    release: jellyseerr
  name: jellyseerr
  namespace: prod-media
spec:
  rules:
    - host: jellyseerr.st0rmingbr4in.com
      http:
        paths:
          - backend:
              service:
                name: jellyseerr
                port:
                  number: 10241
            path: /
            pathType: Prefix
